--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URI=mongodb+srv://mustitrtk:XLVLFBGrNgcsZj67@cluster0.ehq0ddj.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=your_mongo_url
